--- a/package.json
+++ b/package.json
@@ -1,1 +1,1 @@
-{"type":"module","dependencies":{"express":"^4.19.2","joi":"^17.13.3","mongoose":"^8.5.0","multer":"^1.4.5-lts.1","nodemon":"^3.1.4","slugify":"^1.6.6","uuid":"^10.0.0"}}
+{"type":"module","dependencies":{"bcrypt":"^5.1.1","dotenv":"^16.4.5","express":"^4.19.2","joi":"^17.13.3","jsonwebtoken":"^9.0.2","mongoose":"^8.5.0","multer":"^1.4.5-lts.1","nodemon":"^3.1.4","slugify":"^1.6.6","uuid":"^10.0.0"}}
